fix: logo not showing on ff

--- a/assets/css/screen.less
+++ b/assets/css/screen.less
@@ -362,7 +362,8 @@ div.article-preview {
     margin-bottom: 10px;
 
     max-width: 90px;
-
+    width: 100%;
+    
     // text-align: center;
 
     &:hover {
